centrodistribucion-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: centrodistribucion-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: centrodistribucion
  template:
    metadata:
      labels:
        app: centrodistribucion
    spec:
      containers:
      - name: centrodistribucion-container
        image: us-east1-docker.pkg.dev/no-monolitos/microservicios/centrodistribucion:latest
        resources:
          requests:
            memory: "128Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
        ports:
        - containerPort: 5000
