entregas-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: entregas-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: entregas
  template:
    metadata:
      labels:
        app: entregas
    spec:
      containers:
      - name: entregas-container
        image: us-east1-docker.pkg.dev/no-monolitos/microservicios/entregas:latest
        resources:
          requests:
            memory: "128Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
        ports:
        - containerPort: 5000
