ordenes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordenes-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ordenes
  template:
    metadata:
      labels:
        app: ordenes
    spec:
      containers:
      - name: ordenes-container
        image: us-east1-docker.pkg.dev/no-monolitos/microservicios/ordenes:latest
        ports:
        - containerPort: 5000
