bff-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bff
  template:
    metadata:
      labels:
        app: bff
    spec:
      containers:
      - name: bff-container
        image: us-east1-docker.pkg.dev/no-monolitos/microservicios/bff:latest
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
        ports:
        - containerPort: 8003
---

apiVersion: v1
kind: Service
metadata:
  name: bff-service
spec:
  selector:
    app: bff
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8003
  type: LoadBalancer

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bff-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: bff-service
            port:
              name: http
