sagalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sagalog-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sagalog
  template:
    metadata:
      labels:
        app: sagalog
    spec:
      containers:
      - name: sagalog-container
        image: us-east1-docker.pkg.dev/no-monolitos/microservicios/sagalog:latest
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
        ports:
        - containerPort: 8004
---

apiVersion: v1
kind: Service
metadata:
  name: sagalog-service
spec:
  selector:
    app: sagalog
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8004
  type: LoadBalancer

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sagalog-ingress
spec:
  rules:
  - http:
      paths:
      - path: /sagalog/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: sagalog-service
            port:
              name: http
